# GPU-Projects

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
doc/: Links.md  Profile-array-size-5000-step-1000-f.ncu-rep
results/: double_output_varj.csv  double_output_vark.csv  double_output_varsize.csv  float_output_varj.csv  float_output_vark.csv  float_output_varsize.csv  plotter.py
src/: double.cu  float.cu  main.cu
src/double/: benchmark_mono.cu  double.cu  kernels.cu
src/doubles/: benchmark_mono.cu  multiple_elems.cu
src/float/: float.cu  kernels.cu
src/includes/: commons.h  commons.hpp
